Support for troubleshooting and basic logging to file

--- a/app/src/main/res/values/website.xml
+++ b/app/src/main/res/values/website.xml
@@ -5,4 +5,8 @@
     <string name="license_url" translatable="false">%1$s/license</string>
 
     <string name="hugginface_url" translatable="false">https://huggingface.co/%1$s</string>
+
+    <string name="github_url" translatable="false">https://github.com</string>
+    <string name="github_repo_url" translatable="false">%1$s/FricoRico/Versta.Android</string>
+    <string name="github_issues_url" translatable="false">%1$s/FricoRico/Versta.Android/issues</string>
 </resources>
