Prepared release build and added new app icons

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,81 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportWidth="108"
-        android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                    android:startY="49.59793"
-                    android:startX="42.9492"
-                    android:endY="92.4963"
-                    android:endX="85.84757"
-                    android:type="linear">
-                <item
-                        android:color="#44000000"
-                        android:offset="0.0" />
-                <item
-                        android:color="#00000000"
-                        android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-            android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-            android:fillColor="#FFFFFF"
-            android:fillType="nonZero"
-            android:strokeWidth="1"
-            android:strokeColor="#00000000" />
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:pathData="M265.43,243.97C270.64,235.41 280.06,229.69 290.8,229.69C307.18,229.69 320.47,242.99 320.47,259.37C320.47,275.75 307.18,289.05 290.8,289.05C278.87,289.05 268.57,281.99 263.86,271.83L256.83,259L265.39,243.94L265.43,243.97Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="276.44"
+          android:startY="282.04"
+          android:endX="305.16"
+          android:endY="240.66"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF868686"/>
+        <item android:offset="1" android:color="#FFD1D1D1"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M264.9,272.58C269.79,282.18 279.77,288.77 291.27,288.77C302.07,288.77 311.39,282.82 316.53,274.15L282.04,334.3L281.94,334.3C276.68,342.47 267.5,347.88 257.07,347.88C245.6,347.88 235.66,341.35 230.75,331.8L158.65,206.6C156.56,202.55 155.38,197.95 155.38,193.08C155.38,176.77 168.63,163.52 184.94,163.52C196.41,163.52 206.37,170.07 211.27,179.64L257.07,259.21L264.9,272.58Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="177.4"
+          android:startY="181.18"
+          android:endX="263.56"
+          android:endY="323.95"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFE2E2E2"/>
+        <item android:offset="1" android:color="#FFA7A7A7"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M156.7,184.34C160.42,172.29 171.67,163.52 184.94,163.52C196.41,163.52 206.37,170.07 211.27,179.64L257.07,259.21L264.9,272.58C269.79,282.18 279.77,288.77 291.27,288.77C302.07,288.77 311.39,282.82 316.53,274.15L311.08,283.66C309.38,285.55 307.97,286.31 305.84,287.71C301.48,290 296.54,291.3 291.27,291.3C278.81,291.3 268,284.18 262.68,273.8L254.88,260.49C254.88,260.48 254.88,260.48 254.87,260.47L209.07,180.9C209.05,180.86 209.03,180.83 209.02,180.79C204.54,172.04 195.43,166.05 184.94,166.05C177.95,166.05 171.8,168.96 166.78,173.07C161.14,177.69 159.88,179.35 156.7,184.34ZM262.68,273.8L262.68,273.79L262.68,273.8Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="240.74"
+          android:startY="247.93"
+          android:endX="256.83"
+          android:endY="302.1"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFEDEDED"/>
+        <item android:offset="1" android:color="#FFAAAAAA"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M328.82,193.08m-29.56,0a29.56,29.56 92.31,1 1,59.12 0a29.56,29.56 92.31,1 1,-59.12 0">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="338.3"
+          android:startY="175.74"
+          android:endX="273.15"
+          android:endY="292.62"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFDFDFDF"/>
+        <item android:offset="1" android:color="#FF535353"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M299.7,187.98C302.12,174.09 314.25,163.52 328.82,163.52C345.14,163.52 358.38,176.77 358.38,193.08C358.38,197.12 357.57,200.98 356.1,204.49C356.17,202.09 355.85,195.88 355.85,193.04C355.83,178.14 343.72,166.05 328.82,166.05C319.27,166.05 310.86,171.02 306.06,178.51C303.67,182.24 302.71,183.59 299.7,187.98Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="336.33"
+          android:startY="168.89"
+          android:endX="325.98"
+          android:endY="195.63"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFEFEFEF"/>
+        <item android:offset="1" android:color="#FFBFBFBF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M325.47,180.21L314.48,180.21C313.75,180.21 313.12,180.47 312.59,180.99C312.07,181.52 311.81,182.15 311.81,182.88L311.81,182.95C311.81,183.68 312.06,184.31 312.59,184.85C313.11,185.39 313.74,185.66 314.48,185.66L333.96,185.66C332.43,190.04 330.61,193.4 328.47,195.75C326.61,193.79 325.01,191.15 323.67,187.86C323.39,187.15 322.92,186.63 322.26,186.29C321.59,185.95 320.9,185.87 320.19,186.06L319.63,186.21C318.92,186.4 318.39,186.83 318.05,187.49C317.71,188.16 317.67,188.84 317.93,189.52C317.93,189.52 317.94,189.53 317.94,189.53C319.55,193.51 321.55,196.8 323.93,199.4C321.46,200.91 318.18,202.29 314.07,203.56C314.07,203.56 314.07,203.56 314.07,203.56C313.37,203.78 312.85,204.22 312.5,204.87C312.14,205.53 312.09,206.22 312.35,206.93C312.35,206.92 312.42,207.13 312.42,207.13C312.42,207.14 312.42,207.14 312.42,207.14C312.67,207.86 313.13,208.39 313.78,208.73C314.45,209.08 315.14,209.15 315.83,208.92C321.19,207.34 325.45,205.47 328.62,203.33C331.84,205.5 336.06,207.37 341.31,208.93C342.03,209.15 342.72,209.08 343.38,208.73C344.04,208.39 344.49,207.86 344.75,207.14L344.82,206.92C345.07,206.21 345.02,205.53 344.67,204.87C344.32,204.22 343.8,203.78 343.1,203.56C343.1,203.56 343.1,203.56 343.1,203.56C339.02,202.29 335.72,200.91 333.18,199.42C336.14,196.15 338.59,191.57 340.51,185.66L342.69,185.66C343.42,185.66 344.06,185.39 344.58,184.85C345.11,184.31 345.36,183.68 345.36,182.95C345.36,182.97 345.36,182.98 345.36,182.99L345.36,182.88C345.36,182.15 345.1,181.52 344.58,180.99C344.05,180.47 343.42,180.21 342.69,180.21L331.7,180.21L331.7,177.92C331.7,177.19 331.44,176.56 330.92,176.02C330.39,175.48 329.76,175.21 329.02,175.21L328.15,175.21C327.41,175.21 326.78,175.48 326.25,176.02C325.73,176.56 325.47,177.19 325.47,177.92L325.47,180.21Z"
+      android:fillColor="#555555"
+      android:fillType="nonZero"/>
 </vector>
